--- a/pug/options.pug
+++ b/pug/options.pug
@@ -3,10 +3,10 @@ html
     head
         meta(charset="utf-8")
         title cookey config
-        link(rel="stylesheet" href="../css/config.css")
+        link(rel="stylesheet" href="../css/options.css")
     body
         form
             textarea.config
             button.reset(type="button") reset
             button.save(type="submit") save
-            script(src="../js/config-page.js")
+            script(src="../js/options.js")
