--- a/sass/options.scss
+++ b/sass/options.scss
@@ -1,5 +1,35 @@
 .config {
     box-sizing: border-box;
     width: 100%;
-    min-height: 300px;
+    height: 500px;
+}
+
+.errors {
+    color: red;
+    font-size: 1.2rem;
+
+    .error.toml {
+        .line {
+            &:before {
+                content: "(";
+            }
+            &:after {
+                content: ",";
+            }
+        }
+        .column:after {
+            content: "): ";
+        }
+    }
+
+    .error.validation {
+        .instance {
+            &:before {
+                content: "[";
+            }
+            &:after {
+                content: "]: ";
+            }
+        }
+    }
 }
