--- a/sass/options.scss
+++ b/sass/options.scss
@@ -8,7 +8,7 @@
     color: red;
     font-size: 1.2rem;
 
-    .error.toml {
+    .error.yaml {
         .line {
             &:before {
                 content: "(";
